--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,9 +1,6 @@
-<div class="sidebar" data-color="orange">
-    <!--
-      Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
-  -->
+<div class="sidebar" data-color="green">
     <div class="logo" style="text-align: center;">
-      <a href="http://www.creative-tim.com" class="simple-text logo-mini">
+      <a href="" class="simple-text logo-mini">
         <img src="../assets/img/icon-sidebar.png">
       </a>
       <a href="http://www.creative-tim.com" class="simple-text logo-normal">
