--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,13 +1,10 @@
-<div class="wrapper ">
+<div class="wrapper">
     <div class="sidebar" data-color="green">
-      <!--
-        Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
-    -->
       <div class="logo" style="text-align: center;">
-        <a href="http://www.creative-tim.com" class="simple-text logo-mini">
+        <a href="#" class="simple-text logo-mini">
           <img src="../assets/img/icon-sidebar.png">
         </a>
-        <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+        <a href="#" class="simple-text logo-normal">
           <b>X-BOT</b><br> Criador de chatbots
         </a>
       </div>
