--- a/src/app/layout/projects/projects.component.html
+++ b/src/app/layout/projects/projects.component.html
@@ -31,8 +31,8 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label for="exampleFormControlSelect2">Selecione as integrações desejadas</label>
-                  <select type="text" class="form-control" id="exampleFormControlSelect2" multiple
-                    class="form-control" placeholder="Seguimento da empresa">
+                  <select type="text" class="form-control" id="exampleFormControlSelect2" multiple class="form-control"
+                    placeholder="Seguimento da empresa">
                     <option value="">WhatsApp</option>
                     <option value="">Facebook</option>
                     <option value="">Instagram</option>
@@ -77,8 +77,8 @@
               <div class="col-md-6">
               </div>
               <div class="col-md-2">
-                <button class="btn btn-primary btn-block"
-                  onclick="nowuiDashboard.showNotification('top','left')">Novo projeto</button>
+                <button class="btn btn-primary btn-block" onclick="nowuiDashboard.showNotification('top','left')">Novo
+                  projeto</button>
               </div>
               <div class="col-md-2">
                 <button class="btn btn-primary btn-block"
@@ -166,8 +166,7 @@
                       </td>
                       <td class="text-right">
                         <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                        <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                          class="now-ui-icons ui-1_simple-remove"
+                        <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                           onclick="nowuiDashboard.showNotification('top','center')"></i>
                       </td>
                     </tr>
@@ -186,8 +185,7 @@
                       </td>
                       <td class="text-right">
                         <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                        <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                          class="now-ui-icons ui-1_simple-remove"
+                        <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                           onclick="nowuiDashboard.showNotification('top','center')"></i>
                       </td>
                     </tr>
@@ -206,8 +204,7 @@
                       </td>
                       <td class="text-right">
                         <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                        <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                          class="now-ui-icons ui-1_simple-remove"
+                        <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                           onclick="nowuiDashboard.showNotification('top','center')"></i>
                       </td>
                     </tr>
@@ -226,8 +223,7 @@
                       </td>
                       <td class="text-right">
                         <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                        <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                          class="now-ui-icons ui-1_simple-remove"
+                        <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                           onclick="nowuiDashboard.showNotification('top','center')"></i>
                       </td>
                     </tr>
@@ -298,7 +294,7 @@
                                 </div>
                                 <div class="col-md-4 " data-tabs="tabs">
                                   <b><i style="color: rgb(0, 0, 0);" class="now-ui-icons ui-1_simple-add"></i></b>
-                                  <label style="margin-left: 5px;"onclick="Mudarestado('minhaDiv')" > Adicionais</label>
+                                  <label style="margin-left: 5px;" onclick="Mudarestado('minhaDiv')"> Adicionais</label>
                                 </div>
                                 <div class="col-md-12" id="minhaDiv" style="display:none;">
                                   <div class="col-md-6">
@@ -361,8 +357,7 @@
                         <td class="text-right">
                           <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"
                             onclick="editTitle()"></i>
-                          <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                            class="now-ui-icons ui-1_simple-remove"
+                          <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                             onclick="nowuiDashboard.showNotification('top','center')"></i>
                         </td>
                       </tr>
@@ -378,8 +373,7 @@
                         </td>
                         <td class="text-right">
                           <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                          <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                            class="now-ui-icons ui-1_simple-remove"
+                          <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                             onclick="nowuiDashboard.showNotification('top','center')"></i>
                         </td>
                       </tr>
@@ -395,8 +389,7 @@
                         </td>
                         <td class="text-right">
                           <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                          <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                            class="now-ui-icons ui-1_simple-remove"
+                          <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                             onclick="nowuiDashboard.showNotification('top','center')"></i>
                         </td>
                       </tr>
@@ -412,8 +405,7 @@
                         </td>
                         <td class="text-right">
                           <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                          <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                            class="now-ui-icons ui-1_simple-remove"
+                          <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                             onclick="nowuiDashboard.showNotification('top','center')"></i>
                         </td>
                       </tr>
@@ -428,22 +420,20 @@
                         class="btn btn-primary btn-block">Incluir</a>
                     </div>
                     <!-- Modal -->
-                    <div class="modal fade" id="myModa2" tabindex="-1" role="dialog"
-                      aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="myModa2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                      aria-hidden="true">
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-body">
                             <div class="card-body">
-                              <button type="button" class="close" data-dismiss="modal"
-                                aria-hidden="true">×</button>
+                              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                               <h5 class="title">Chat / Cadastrar entidade</h5>
                               <form>
                                 <div class="row">
                                   <div class="col-md-12">
                                     <div class="form-group">
                                       <label>Nome</label>
-                                      <input type="text" class="form-control"
-                                        placeholder="Digite o nome da entidade">
+                                      <input type="text" class="form-control" placeholder="Digite o nome da entidade">
                                     </div>
                                   </div>
                                   <div class="col-md-6">
@@ -472,8 +462,7 @@
                                   <div class="col-md-6">
                                     <div class="form-group">
                                       <label>Nome</label>
-                                      <input type="text" class="form-control"
-                                        placeholder="Digite o nome da entidade">
+                                      <input type="text" class="form-control" placeholder="Digite o nome da entidade">
                                     </div>
                                   </div>
                                   <div class="col-md-6">
@@ -496,8 +485,7 @@
                                     </div>
                                   </div>
                                   <div class="col-md-1" style="margin-top: 2%;">
-                                    <i style="color: rgb(255, 30, 0);"
-                                      class="now-ui-icons ui-1_simple-delete"></i>
+                                    <i style="color: rgb(255, 30, 0);" class="now-ui-icons ui-1_simple-delete"></i>
                                   </div>
                                   <div class="col-md-5">
                                     <div class="form-group">
@@ -546,8 +534,7 @@
                     </td>
                     <td class="text-right">
                       <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                      <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                        class="now-ui-icons ui-1_simple-remove"
+                      <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                         onclick="nowuiDashboard.showNotification('top','center')"></i>
                     </td>
                   </tr>
@@ -563,8 +550,7 @@
                     </td>
                     <td class="text-right">
                       <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                      <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                        class="now-ui-icons ui-1_simple-remove"
+                      <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                         onclick="nowuiDashboard.showNotification('top','center')"></i>
                     </td>
                   </tr>
@@ -580,8 +566,7 @@
                     </td>
                     <td class="text-right">
                       <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                      <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                        class="now-ui-icons ui-1_simple-remove"
+                      <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                         onclick="nowuiDashboard.showNotification('top','center')"></i>
                     </td>
                   </tr>
@@ -597,8 +582,7 @@
                     </td>
                     <td class="text-right">
                       <i style="color: rgb(0, 119, 255);" class="now-ui-icons ui-2_settings-90"></i>
-                      <i style="margin-left: 10px; color: rgb(233, 19, 19);"
-                        class="now-ui-icons ui-1_simple-remove"
+                      <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-remove"
                         onclick="nowuiDashboard.showNotification('top','center')"></i>
                     </td>
                   </tr>
