Adição das novas telas (Administração, Funcionalidades e Projetos).

--- a/src/app/layout/projects/projects.component.html
+++ b/src/app/layout/projects/projects.component.html
@@ -596,3 +596,272 @@
     </div>
   </div>
 </div>
+
+<div class="content">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-header">
+          <h5 class="title">Chat / Cadastrar diálogo</h5>
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Nome do nó</label>
+                <input type="text" class="form-control" placeholder="Digite o nome do nó">
+              </div>
+            </div>
+            <form>
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label>Usa slot?</label>
+                </div>
+                <div style="margin-top: -4%;">
+                  <div class="form-check form-check-radio form-check-inline">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                        value="option1"> Sim
+                      <span class="form-check-sign"></span>
+                    </label>
+                  </div>
+                  <div class="form-check form-check-radio form-check-inline">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                        value="option2"> Não
+                      <span class="form-check-sign"></span>
+                    </label>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Múltipla resposta?</label>
+              </div>
+              <div style="margin-top: -4%;">
+                <div class="form-check form-check-radio form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                      value="option1"> Sim
+                    <span class="form-check-sign"></span>
+                  </label>
+                </div>
+                <div class="form-check form-check-radio form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                      value="option2"> Não
+                    <span class="form-check-sign"></span>
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Status</label>
+                <select type="text" class="form-control">
+                  <option value="">Selecione o status de atividade</option>
+                  <option value="">Ativo</option>
+                  <option value="">Inativo</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Tipo pasta?</label>
+                <select type="text" class="form-control">
+                  <option value="">Selecione uma opção</option>
+                  <option value="">Sim</option>
+                  <option value="">Não</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Seguimento</label>
+                <select type="text" class="form-control">
+                  <option value="">Selecione o status de atividade</option>
+                  <option value="">Indústria</option>
+                  <option value="">Farmácia</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table">
+              <thead class=" text-primary">
+                <th>
+                  <b>Slot</b>
+                </th>
+                <th>
+                  <b></b>
+                </th>
+                <th>
+                  <b></b>
+                </th>
+                <th class="text-right">
+                  <b></b>
+                </th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    Condição:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Variável:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Valor:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td class="text-right">
+                    <i style="color: rgb(14, 156, 38);" class="now-ui-icons ui-1_simple-add"></i>
+
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Condição:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Variável:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>
+                    Valor:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td class="text-right">
+                    <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-delete"
+                      onclick="nowuiDashboard.showNotification('top','center')"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Condição:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Variável:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>
+                    Valor:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td class="text-right">
+                    <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-delete"
+                      onclick="nowuiDashboard.showNotification('top','center')"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Condição: <input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Variável:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>
+                    Valor:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td class="text-right">
+                    <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-delete"
+                      onclick="nowuiDashboard.showNotification('top','center')"></i>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <label><b>Resposta: </b></label>
+              <input type="text" value="" class="form-control" placeholder="Resposta aqui">
+            </div>
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-2">
+              <button class="btn btn-primary btn-block"
+                onclick="nowuiDashboard.showNotification('top','left')">Cancelar</button>
+            </div>
+            <div class="col-md-2 pl-1">
+              <button class="btn btn-primary btn-block"
+                onclick="nowuiDashboard.showNotification('top','center')">Salvar</button>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table">
+              <thead class=" text-primary">
+                <th>
+                  <b>Múltipla Resposta</b>
+                </th>
+                <th>
+                  <b></b>
+                </th>
+                <th class="text-right">
+                  <b></b>
+                </th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    Condição:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Texto:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td class="text-right">
+                    <i style="color: rgb(14, 156, 38);" class="now-ui-icons ui-1_simple-add"></i>
+
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Condição:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Texto:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td class="text-right">
+                    <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-delete"
+                      onclick="nowuiDashboard.showNotification('top','center')"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Condição:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Texto:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td class="text-right">
+                    <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-delete"
+                      onclick="nowuiDashboard.showNotification('top','center')"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Condição: <input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td>Texto:<input type="text" value="" style="margin-left: 5%;">
+                  </td>
+                  <td class="text-right">
+                    <i style="margin-left: 10px; color: rgb(233, 19, 19);" class="now-ui-icons ui-1_simple-delete"
+                      onclick="nowuiDashboard.showNotification('top','center')"></i>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <label><b>Resposta: </b></label>
+              <input type="text" value="" class="form-control" placeholder="Resposta aqui">
+            </div>
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-2">
+              <button class="btn btn-primary btn-block"
+                onclick="nowuiDashboard.showNotification('top','left')">Cancelar</button>
+            </div>
+            <div class="col-md-2 pl-1">
+              <button class="btn btn-primary btn-block"
+                onclick="nowuiDashboard.showNotification('top','center')">Salvar</button>
+            </div>
+          </div>
+        </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
