Alteração da cor da navbar e adição dos componentes e módulos no "app.module"

--- a/src/assets/css/now-ui-dashboard.css
+++ b/src/assets/css/now-ui-dashboard.css
@@ -1709,7 +1709,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
   background-color: #2CA8FF !important; }
 
 .bg-success {
-  background-color: #18ce0f !important; }
+  background-color: #056600 !important; }
 
 .bg-danger {
   background-color: #FF3636 !important; }
